--- a/LinearAlgebra/Controls/TwoMass/derivation of eom.ipynb
+++ b/LinearAlgebra/Controls/TwoMass/derivation of eom.ipynb
@@ -224,12 +224,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[ \\left[ \\begin{array}{r}0\\\\0\\\\0\\\\\\frac{1}{m_{2}}\\end{array} \\right] \\]"
+      ],
+      "text/plain": [
+       "4-element Array{Sym,1}:\n",
+       "    0\n",
+       "    0\n",
+       "    0\n",
+       " 1/m2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = [ diff(f,f2) for f in F ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×4 Array{Int64,2}:\n",
+       " 0  1  0  0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CC = [ 0 1 0 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's export this to Matlab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 1 0; 0 0 0 1; (-k1 - k2)./m1 k2./m1 (-c1 - c2)./m1 c2./m1; k2./m2 -k2./m2 c2./m2 -c2./m2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sympy_meth( :octave_code, A) |> println"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0; 0; 0; 1./m2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sympy_meth( :octave_code, B) |> println"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "[ diff(f,z) for f in F, z in [z1,z2,z3,z4] ]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
