--- a/Dynamics/inclass-20190320/Hamilton's equations.ipynb
+++ b/Dynamics/inclass-20190320/Hamilton's equations.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "(m, M, g, l, J_G)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,57 +47,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "\\begin{equation*}\\theta{\\left (t \\right )}\\end{equation*}"
-      ],
-      "text/plain": [
-       "theta(t)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t,τ, f = symbols(\"t, tau, f\")\n",
     "x = SymFunction(\"x\")(t)\n",
-    "θ = SymFunction(\"theta\")(t)"
+    "θ = SymFunction(\"theta\")(t)\n",
+    ";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3-element Array{Int64,1}:\n",
-       " 0\n",
-       " 0\n",
-       " 1"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ihat= [1,0,0]\n",
     "jhat = [0,1,0]\n",
-    "khat= [0,0,1]"
+    "khat= [0,0,1]\n",
+    ";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +86,7 @@
        "                      0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +121,7 @@
        " dt           dt               2      "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +144,7 @@
        "g*l*m*cos(theta(t))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +199,7 @@
        "                       dt           dt               2      "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +224,7 @@
        " Eq(p2, J_G*Derivative(theta(t), t) + l^2*m*Derivative(theta(t), t) + l*m*cos(theta(t))*Derivative(x(t), t))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,21 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\begin{equation*}\\begin{cases}\\frac{d}{d t} \\theta{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{1} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{2} \\left(M + m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\frac{d}{d t} x{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{2} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{1} \\left(J_{G} + l^{2} m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\end{cases}\\end{equation*}"
+       "\\begin{equation*}\\begin{cases}\\frac{d}{d t} x{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{2} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{1} \\left(J_{G} + l^{2} m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\frac{d}{d t} \\theta{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{1} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{2} \\left(M + m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\end{cases}\\end{equation*}"
       ],
       "text/plain": [
        "Dict{Sym,Sym} with 2 entries:\n",
-       "  Derivative(theta(t), t) => (l*m*p1*cos(theta(t)) - p2*(M + m))/(l^2*m^2*cos(t…\n",
-       "  Derivative(x(t), t)     => (l*m*p2*cos(theta(t)) - p1*(J_G + l^2*m))/(l^2*m^2…"
+       "  Derivative(x(t), t)     => (l*m*p2*cos(theta(t)) - p1*(J_G + l^2*m))/(l^2*m^2…\n",
+       "  Derivative(theta(t), t) => (l*m*p1*cos(theta(t)) - p2*(M + m))/(l^2*m^2*cos(t…"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +304,7 @@
        "                                  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +329,7 @@
        " 2*l^2*m^2*(J_G*M*g*l*m*cos(theta(t)) + J_G*g*l*m^2*cos(theta(t)) + J_G*p1^2/2 + M*g*l^3*m^2*cos(theta(t)) + M*p2^2/2 - g*l^3*m^3*cos(theta(t))^3 + g*l^3*m^3*cos(theta(t)) + l^2*m*p1^2/2 - l*m*p1*p2*cos(theta(t)) + m*p2^2/2)*sin(theta(t))*cos(theta(t))/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(theta(t))^2)^2 + tau - (-J_G*M*g*l*m*sin(theta(t)) - J_G*g*l*m^2*sin(theta(t)) - M*g*l^3*m^2*sin(theta(t)) + 3*g*l^3*m^3*sin(theta(t))*cos(theta(t))^2 - g*l^3*m^3*sin(theta(t)) + l*m*p1*p2*sin(theta(t)))/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(theta(t))^2)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +354,7 @@
        "       (M*p2 - l*m*p1*cos(theta(t)) + m*p2)/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(theta(t))^2)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +374,7 @@
        "\"% Not supported in Octave:\\n% theta\\n[(J_G.*p1 + l.^2.*m.*p1 - l.*m.*p2.*cos(theta(t)))./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(theta(t)).^2); (M.*p2 - l.*m.*p1.*cos(theta(t)) + m.*p2)./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(theta(t)).^2)]\""
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,23 +393,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "\\[ \\left[ \\begin{array}{r}f\\\\\\frac{2 l^{2} m^{2} \\left(J_{G} M g l m \\cos{\\left (z_{2} \\right )} + J_{G} g l m^{2} \\cos{\\left (z_{2} \\right )} + \\frac{J_{G} z_{3}^{2}}{2} + M g l^{3} m^{2} \\cos{\\left (z_{2} \\right )} + \\frac{M z_{4}^{2}}{2} - g l^{3} m^{3} \\cos^{3}{\\left (z_{2} \\right )} + g l^{3} m^{3} \\cos{\\left (z_{2} \\right )} + \\frac{l^{2} m z_{3}^{2}}{2} - l m z_{3} z_{4} \\cos{\\left (z_{2} \\right )} + \\frac{m z_{4}^{2}}{2}\\right) \\sin{\\left (z_{2} \\right )} \\cos{\\left (z_{2} \\right )}}{\\left(J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}\\right)^{2}} + torque - \\frac{- J_{G} M g l m \\sin{\\left (z_{2} \\right )} - J_{G} g l m^{2} \\sin{\\left (z_{2} \\right )} - M g l^{3} m^{2} \\sin{\\left (z_{2} \\right )} + 3 g l^{3} m^{3} \\sin{\\left (z_{2} \\right )} \\cos^{2}{\\left (z_{2} \\right )} - g l^{3} m^{3} \\sin{\\left (z_{2} \\right )} + l m z_{3} z_{4} \\sin{\\left (z_{2} \\right )}}{J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}}\\\\\\frac{J_{G} z_{3} + l^{2} m z_{3} - l m z_{4} \\cos{\\left (z_{2} \\right )}}{J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}}\\\\\\frac{M z_{4} - l m z_{3} \\cos{\\left (z_{2} \\right )} + m z_{4}}{J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}}\\end{array} \\right] \\]"
+       "\\[ \\left[ \\begin{array}{r}\\frac{J_{G} z_{3} + l^{2} m z_{3} - l m z_{4} \\cos{\\left (z_{2} \\right )}}{J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}}\\\\\\frac{M z_{4} - l m z_{3} \\cos{\\left (z_{2} \\right )} + m z_{4}}{J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}}\\\\f\\\\\\frac{2 l^{2} m^{2} \\left(J_{G} M g l m \\cos{\\left (z_{2} \\right )} + J_{G} g l m^{2} \\cos{\\left (z_{2} \\right )} + \\frac{J_{G} z_{3}^{2}}{2} + M g l^{3} m^{2} \\cos{\\left (z_{2} \\right )} + \\frac{M z_{4}^{2}}{2} - g l^{3} m^{3} \\cos^{3}{\\left (z_{2} \\right )} + g l^{3} m^{3} \\cos{\\left (z_{2} \\right )} + \\frac{l^{2} m z_{3}^{2}}{2} - l m z_{3} z_{4} \\cos{\\left (z_{2} \\right )} + \\frac{m z_{4}^{2}}{2}\\right) \\sin{\\left (z_{2} \\right )} \\cos{\\left (z_{2} \\right )}}{\\left(J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}\\right)^{2}} + torque - \\frac{- J_{G} M g l m \\sin{\\left (z_{2} \\right )} - J_{G} g l m^{2} \\sin{\\left (z_{2} \\right )} - M g l^{3} m^{2} \\sin{\\left (z_{2} \\right )} + 3 g l^{3} m^{3} \\sin{\\left (z_{2} \\right )} \\cos^{2}{\\left (z_{2} \\right )} - g l^{3} m^{3} \\sin{\\left (z_{2} \\right )} + l m z_{3} z_{4} \\sin{\\left (z_{2} \\right )}}{J_{G} M + J_{G} m + M l^{2} m + l^{2} m^{2} \\sin^{2}{\\left (z_{2} \\right )}}\\end{array} \\right] \\]"
       ],
       "text/plain": [
        "4-element Array{Sym,1}:\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                                                                                               f\n",
-       " 2*l^2*m^2*(J_G*M*g*l*m*cos(z2) + J_G*g*l*m^2*cos(z2) + J_G*z3^2/2 + M*g*l^3*m^2*cos(z2) + M*z4^2/2 - g*l^3*m^3*cos(z2)^3 + g*l^3*m^3*cos(z2) + l^2*m*z3^2/2 - l*m*z3*z4*cos(z2) + m*z4^2/2)*sin(z2)*cos(z2)/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)^2 + torque - (-J_G*M*g*l*m*sin(z2) - J_G*g*l*m^2*sin(z2) - M*g*l^3*m^2*sin(z2) + 3*g*l^3*m^3*sin(z2)*cos(z2)^2 - g*l^3*m^3*sin(z2) + l*m*z3*z4*sin(z2))/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)\n",
        "                                                                                                                                                                                                                                                                                                                                                                              (J_G*z3 + l^2*m*z3 - l*m*z4*cos(z2))/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)\n",
-       "                                                                                                                                                                                                                                                                                                                                                                                    (M*z4 - l*m*z3*cos(z2) + m*z4)/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)"
+       "                                                                                                                                                                                                                                                                                                                                                                                    (M*z4 - l*m*z3*cos(z2) + m*z4)/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)\n",
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                               f\n",
+       " 2*l^2*m^2*(J_G*M*g*l*m*cos(z2) + J_G*g*l*m^2*cos(z2) + J_G*z3^2/2 + M*g*l^3*m^2*cos(z2) + M*z4^2/2 - g*l^3*m^3*cos(z2)^3 + g*l^3*m^3*cos(z2) + l^2*m*z3^2/2 - l*m*z3*z4*cos(z2) + m*z4^2/2)*sin(z2)*cos(z2)/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)^2 + torque - (-J_G*M*g*l*m*sin(z2) - J_G*g*l*m^2*sin(z2) - M*g*l^3*m^2*sin(z2) + 3*g*l^3*m^3*sin(z2)*cos(z2)^2 - g*l^3*m^3*sin(z2) + l*m*z3*z4*sin(z2))/(J_G*M + J_G*m + M*l^2*m + l^2*m^2*sin(z2)^2)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,19 +417,24 @@
    "source": [
     "z1,z2,z3,z4, torque = symbols(\"z1,z2,z3,z4, torque\")\n",
     "rule1 = Dict( x=> z1, θ=>z2, p1=>z3, p2=>z4, τ=>torque)\n",
-    "F = vcat( pdot, qdot ) |> subs(rule1)"
+    "\n",
+    "## previous error, now fixed:\n",
+    "# by the definition of z, I need to be careful on the ordering:\n",
+    "F = vcat( qdot, pdot ) |> subs(rule1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[f; 2*l.^2.*m.^2.*(J_G.*M.*g.*l.*m.*cos(z2) + J_G.*g.*l.*m.^2.*cos(z2) + J_G.*z3.^2/2 + M.*g.*l.^3.*m.^2.*cos(z2) + M.*z4.^2/2 - g.*l.^3.*m.^3.*cos(z2).^3 + g.*l.^3.*m.^3.*cos(z2) + l.^2.*m.*z3.^2/2 - l.*m.*z3.*z4.*cos(z2) + m.*z4.^2/2).*sin(z2).*cos(z2)./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2).^2 + torque - (-J_G.*M.*g.*l.*m.*sin(z2) - J_G.*g.*l.*m.^2.*sin(z2) - M.*g.*l.^3.*m.^2.*sin(z2) + 3*g.*l.^3.*m.^3.*sin(z2).*cos(z2).^2 - g.*l.^3.*m.^3.*sin(z2) + l.*m.*z3.*z4.*sin(z2))./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2); (J_G.*z3 + l.^2.*m.*z3 - l.*m.*z4.*cos(z2))./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2); (M.*z4 - l.*m.*z3.*cos(z2) + m.*z4)./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2)]\n"
+      "[(J_G.*z3 + l.^2.*m.*z3 - l.*m.*z4.*cos(z2))./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2); (M.*z4 - l.*m.*z3.*cos(z2) + m.*z4)./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2); f; 2*l.^2.*m.^2.*(J_G.*M.*g.*l.*m.*cos(z2) + J_G.*g.*l.*m.^2.*cos(z2) + J_G.*z3.^2/2 + M.*g.*l.^3.*m.^2.*cos(z2) + M.*z4.^2/2 - g.*l.^3.*m.^3.*cos(z2).^3 + g.*l.^3.*m.^3.*cos(z2) + l.^2.*m.*z3.^2/2 - l.*m.*z3.*z4.*cos(z2) + m.*z4.^2/2).*sin(z2).*cos(z2)./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2).^2 + torque - (-J_G.*M.*g.*l.*m.*sin(z2) - J_G.*g.*l.*m.^2.*sin(z2) - M.*g.*l.^3.*m.^2.*sin(z2) + 3*g.*l.^3.*m.^3.*sin(z2).*cos(z2).^2 - g.*l.^3.*m.^3.*sin(z2) + l.*m.*z3.*z4.*sin(z2))./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2)]\n"
      ]
     }
    ],
@@ -465,21 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2,)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(J_G.*M.*g.*l.*m.*cos(z2) + J_G.*g.*l.*m.^2.*cos(z2) + J_G.*z3.^2/2 + M.*g.*l.^3.*m.^2.*cos(z2) + M.*z4.^2/2 - g.*l.^3.*m.^3.*cos(z2).^3 + g.*l.^3.*m.^3.*cos(z2) + l.^2.*m.*z3.^2/2 - l.*m.*z3.*z4.*cos(z2) + m.*z4.^2/2)./(J_G.*M + J_G.*m + M.*l.^2.*m + l.^2.*m.^2.*sin(z2).^2)\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "sympy_meth(:octave_code, subs(H,rule1) ) |> println"
+   ]
   },
   {
    "cell_type": "code",
