updated Hamilton's Eqn Example - now with inclass-built animation - and full (fancier) animation, with optional feedback control

--- a/Dynamics/inclass-20190320/Hamilton's equations.ipynb
+++ b/Dynamics/inclass-20190320/Hamilton's equations.ipynb
@@ -242,12 +242,12 @@
     {
      "data": {
       "text/latex": [
-       "\\begin{equation*}\\begin{cases}\\frac{d}{d t} x{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{2} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{1} \\left(J_{G} + l^{2} m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\frac{d}{d t} \\theta{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{1} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{2} \\left(M + m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\end{cases}\\end{equation*}"
+       "\\begin{equation*}\\begin{cases}\\frac{d}{d t} \\theta{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{1} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{2} \\left(M + m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\frac{d}{d t} x{\\left (t \\right )} & \\text{=>} &\\frac{l m p_{2} \\cos{\\left (\\theta{\\left (t \\right )} \\right )} - p_{1} \\left(J_{G} + l^{2} m\\right)}{l^{2} m^{2} \\cos^{2}{\\left (\\theta{\\left (t \\right )} \\right )} - \\left(J_{G} + l^{2} m\\right) \\left(M + m\\right)}\\\\\\end{cases}\\end{equation*}"
       ],
       "text/plain": [
        "Dict{Sym,Sym} with 2 entries:\n",
-       "  Derivative(x(t), t)     => (l*m*p2*cos(theta(t)) - p1*(J_G + l^2*m))/(l^2*m^2…\n",
-       "  Derivative(theta(t), t) => (l*m*p1*cos(theta(t)) - p2*(M + m))/(l^2*m^2*cos(t…"
+       "  Derivative(theta(t), t) => (l*m*p1*cos(theta(t)) - p2*(M + m))/(l^2*m^2*cos(t…\n",
+       "  Derivative(x(t), t)     => (l*m*p2*cos(theta(t)) - p1*(J_G + l^2*m))/(l^2*m^2…"
       ]
      },
      "execution_count": 11,
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -457,6 +457,123 @@
    ],
    "source": [
     "sympy_meth(:octave_code, subs(H,rule1) ) |> println"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linearization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\\left[ \\begin{array}{rrrr}0&0&\\frac{J_{G} + l^{2} m}{J_{G} M + J_{G} m + M l^{2} m}&- \\frac{l m}{J_{G} M + J_{G} m + M l^{2} m}\\\\0&0&- \\frac{l m}{J_{G} M + J_{G} m + M l^{2} m}&\\frac{M + m}{J_{G} M + J_{G} m + M l^{2} m}\\\\0&0&0&0\\\\0&\\frac{2 l^{2} m^{2} \\left(J_{G} M g l m + J_{G} g l m^{2} + M g l^{3} m^{2}\\right)}{\\left(J_{G} M + J_{G} m + M l^{2} m\\right)^{2}} - \\frac{- J_{G} M g l m - J_{G} g l m^{2} - M g l^{3} m^{2} + 2 g l^{3} m^{3}}{J_{G} M + J_{G} m + M l^{2} m}&0&0\\end{array}\\right]\\]"
+      ],
+      "text/plain": [
+       "4×4 Array{Sym,2}:\n",
+       " 0  …     -l*m/(J_G*M + J_G*m + M*l^2*m)\n",
+       " 0     (M + m)/(J_G*M + J_G*m + M*l^2*m)\n",
+       " 0                                     0\n",
+       " 0                                     0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rule_equil = Dict(z1=>0, z2=>0, z3=>0, z4=>0)\n",
+    "A = [ diff(f,z) for f in F, z in [z1,z2,z3,z4] ] |> subs(rule_equil)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\\left[ \\begin{array}{rr}0&0\\\\0&0\\\\1&0\\\\0&1\\end{array}\\right]\\]"
+      ],
+      "text/plain": [
+       "4×2 Array{Sym,2}:\n",
+       " 0  0\n",
+       " 0  0\n",
+       " 1  0\n",
+       " 0  1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = [diff(f,u) for f in F, u in [f,torque]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\\left[ \\begin{array}{rrrrrrrr}0&0&\\frac{J_{G} + l^{2} m}{J_{G} M + J_{G} m + M l^{2} m}&- \\frac{l m}{J_{G} M + J_{G} m + M l^{2} m}&0&0&\\frac{g l^{3} m^{3}}{\\left(J_{G} M + J_{G} m + M l^{2} m\\right)^{2}}&- \\frac{g l^{2} m^{2} \\left(M + m\\right)}{\\left(J_{G} M + J_{G} m + M l^{2} m\\right)^{2}}\\\\0&0&- \\frac{l m}{J_{G} M + J_{G} m + M l^{2} m}&\\frac{M + m}{J_{G} M + J_{G} m + M l^{2} m}&0&0&- \\frac{g l^{2} m^{2} \\left(M + m\\right)}{\\left(J_{G} M + J_{G} m + M l^{2} m\\right)^{2}}&\\frac{g l m \\left(M + m\\right)^{2}}{\\left(J_{G} M + J_{G} m + M l^{2} m\\right)^{2}}\\\\1&0&0&0&0&0&0&0\\\\0&1&0&0&- \\frac{g l^{2} m^{2}}{J_{G} M + J_{G} m + M l^{2} m}&\\frac{g l m \\left(M + m\\right)}{J_{G} M + J_{G} m + M l^{2} m}&0&0\\end{array}\\right]\\]"
+      ],
+      "text/plain": [
+       "4×8 Array{Sym,2}:\n",
+       " 0  0  …  -g*l^2*m^2*(M + m)/(J_G*M + J_G*m + M*l^2*m)^2\n",
+       " 0  0        g*l*m*(M + m)^2/(J_G*M + J_G*m + M*l^2*m)^2\n",
+       " 1  0                                                  0\n",
+       " 0  1                                                  0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CM = hcat(B, A*B, A^2*B, A^3*B)\n",
+    "CM = [simplify(x) for x in CM ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\[\\left[ \\begin{array}{rrrrrrrr}1&0&0&0&0&0&0&0\\\\0&1&0&0&- \\frac{g l^{2} m^{2}}{J_{G} M + J_{G} m + M l^{2} m}&\\frac{g l m \\left(M + m\\right)}{J_{G} M + J_{G} m + M l^{2} m}&0&0\\\\0&0&1&0&0&0&0&0\\\\0&0&0&1&0&0&- \\frac{g l^{2} m^{2}}{J_{G} M + J_{G} m + M l^{2} m}&\\frac{g l m \\left(M + m\\right)}{J_{G} M + J_{G} m + M l^{2} m}\\end{array}\\right]\\]"
+      ],
+      "text/plain": [
+       "4×8 Array{Sym,2}:\n",
+       " 1  0  0  0  …                                        0\n",
+       " 0  1  0  0                                           0\n",
+       " 0  0  1  0                                           0\n",
+       " 0  0  0  1     g*l*m*(M + m)/(J_G*M + J_G*m + M*l^2*m)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[simplify(a) for a in SymPy.rref(CM)[1] ]"
    ]
   },
   {
