updated derivation with comparison to regular equation - included the transformation back to angular coordinates, and recovered the usual equation of motion in a single degree of freedom

--- a/Dynamics/inclass-20190325/derivation with constrained lagrange eqn.ipynb
+++ b/Dynamics/inclass-20190325/derivation with constrained lagrange eqn.ipynb
@@ -152,13 +152,13 @@
     {
      "data": {
       "text/latex": [
-       "\\begin{equation*}\\begin{cases}\\frac{d^{2}}{d t^{2}} x{\\left (t \\right )} & \\text{=>} &\\frac{\\left(g y{\\left (t \\right )} - \\left(\\frac{d}{d t} x{\\left (t \\right )}\\right)^{2} - \\left(\\frac{d}{d t} y{\\left (t \\right )}\\right)^{2}\\right) x{\\left (t \\right )}}{x^{2}{\\left (t \\right )} + y^{2}{\\left (t \\right )}}\\\\\\frac{d^{2}}{d t^{2}} y{\\left (t \\right )} & \\text{=>} &- \\frac{g x^{2}{\\left (t \\right )} + \\left(\\left(\\frac{d}{d t} x{\\left (t \\right )}\\right)^{2} + \\left(\\frac{d}{d t} y{\\left (t \\right )}\\right)^{2}\\right) y{\\left (t \\right )}}{x^{2}{\\left (t \\right )} + y^{2}{\\left (t \\right )}}\\\\\\lambda{\\left (t \\right )} & \\text{=>} &\\frac{m \\left(g y{\\left (t \\right )} - \\left(\\frac{d}{d t} x{\\left (t \\right )}\\right)^{2} - \\left(\\frac{d}{d t} y{\\left (t \\right )}\\right)^{2}\\right)}{2 \\left(x^{2}{\\left (t \\right )} + y^{2}{\\left (t \\right )}\\right)}\\\\\\end{cases}\\end{equation*}"
+       "\\begin{equation*}\\begin{cases}\\frac{d^{2}}{d t^{2}} y{\\left (t \\right )} & \\text{=>} &- \\frac{g x^{2}{\\left (t \\right )} + \\left(\\left(\\frac{d}{d t} x{\\left (t \\right )}\\right)^{2} + \\left(\\frac{d}{d t} y{\\left (t \\right )}\\right)^{2}\\right) y{\\left (t \\right )}}{x^{2}{\\left (t \\right )} + y^{2}{\\left (t \\right )}}\\\\\\lambda{\\left (t \\right )} & \\text{=>} &\\frac{m \\left(g y{\\left (t \\right )} - \\left(\\frac{d}{d t} x{\\left (t \\right )}\\right)^{2} - \\left(\\frac{d}{d t} y{\\left (t \\right )}\\right)^{2}\\right)}{2 \\left(x^{2}{\\left (t \\right )} + y^{2}{\\left (t \\right )}\\right)}\\\\\\frac{d^{2}}{d t^{2}} x{\\left (t \\right )} & \\text{=>} &\\frac{\\left(g y{\\left (t \\right )} - \\left(\\frac{d}{d t} x{\\left (t \\right )}\\right)^{2} - \\left(\\frac{d}{d t} y{\\left (t \\right )}\\right)^{2}\\right) x{\\left (t \\right )}}{x^{2}{\\left (t \\right )} + y^{2}{\\left (t \\right )}}\\\\\\end{cases}\\end{equation*}"
       ],
       "text/plain": [
        "Dict{Sym,Sym} with 3 entries:\n",
-       "  Derivative(x(t), (t, 2)) => (g*y(t) - Derivative(x(t), t)^2 - Derivative(y(t)…\n",
        "  Derivative(y(t), (t, 2)) => -(g*x(t)^2 + (Derivative(x(t), t)^2 + Derivative(…\n",
-       "  lambda(t)                => m*(g*y(t) - Derivative(x(t), t)^2 - Derivative(y(…"
+       "  lambda(t)                => m*(g*y(t) - Derivative(x(t), t)^2 - Derivative(y(…\n",
+       "  Derivative(x(t), (t, 2)) => (g*y(t) - Derivative(x(t), t)^2 - Derivative(y(t)…"
       ]
      },
      "execution_count": 6,
@@ -167,7 +167,110 @@
     }
    ],
    "source": [
-    "solve(eom2, [diff(x,t,t), diff(y,t,t), λ])"
+    "sol = solve(eom2, [diff(x,t,t), diff(y,t,t), λ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How does this compare to the usual equation?\n",
+    "For a simple pendulum where $\\theta$ is measured counter-clockwise from the horizontal we can state that any position \n",
+    "$$(x,y) = \\left(l \\cos\\theta,\\, l\\sin\\theta\\right)$$\n",
+    "We can differentiate that as needed to eliminate $x$ and $y$ from the previous odes.\n",
+    "\n",
+    "For reference, the equation of motion would be\n",
+    "$$ \\ddot{\\theta} + \\frac{g}{l}\\cos\\theta = 0$$\n",
+    "(yes it is cosine here due to where the angle is referenced)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation*}\\begin{cases}\\frac{d^{2}}{d t^{2}} y{\\left (t \\right )} & \\text{=>} &- l \\left(\\sin{\\left (\\theta{\\left (t \\right )} \\right )} \\left(\\frac{d}{d t} \\theta{\\left (t \\right )}\\right)^{2} - \\cos{\\left (\\theta{\\left (t \\right )} \\right )} \\frac{d^{2}}{d t^{2}} \\theta{\\left (t \\right )}\\right)\\\\\\frac{d^{2}}{d t^{2}} x{\\left (t \\right )} & \\text{=>} &- l \\left(\\sin{\\left (\\theta{\\left (t \\right )} \\right )} \\frac{d^{2}}{d t^{2}} \\theta{\\left (t \\right )} + \\cos{\\left (\\theta{\\left (t \\right )} \\right )} \\left(\\frac{d}{d t} \\theta{\\left (t \\right )}\\right)^{2}\\right)\\\\\\end{cases}\\end{equation*}"
+      ],
+      "text/plain": [
+       "Dict{Sym,Sym} with 2 entries:\n",
+       "  Derivative(y(t), (t, 2)) => -l*(sin(theta(t))*Derivative(theta(t), t)^2 - cos…\n",
+       "  Derivative(x(t), (t, 2)) => -l*(sin(theta(t))*Derivative(theta(t), (t, 2)) + …"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "θ = SymFunction(\"theta\")(t)\n",
+    "rule1= Dict( x=> l*cos(θ), y=>l*sin(θ) )\n",
+    "rule2 = Dict( diff(x,t) => diff(x |> subs(rule1), t), diff(y,t) => diff(y |> subs(rule1), t) )\n",
+    "rule3 = Dict( diff(x,t,t) => diff(x |> subs(rule1), t,t), diff(y,t,t) => diff(y |> subs(rule1), t,t) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation*}- \\left(g \\cos{\\left (\\theta{\\left (t \\right )} \\right )} + l \\frac{d^{2}}{d t^{2}} \\theta{\\left (t \\right )}\\right) \\sin{\\left (\\theta{\\left (t \\right )} \\right )}\\end{equation*}"
+      ],
+      "text/plain": [
+       " /                      2          \\              \n",
+       " |                     d           |              \n",
+       "-|g*cos(theta(t)) + l*---(theta(t))|*sin(theta(t))\n",
+       " |                      2          |              \n",
+       " \\                    dt           /              "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(x,t,t) - sol[diff(x,t,t)] |> subs(rule3) |>subs(rule2) |> subs(rule1) |> simplify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation*}\\left(g \\cos{\\left (\\theta{\\left (t \\right )} \\right )} + l \\frac{d^{2}}{d t^{2}} \\theta{\\left (t \\right )}\\right) \\cos{\\left (\\theta{\\left (t \\right )} \\right )}\\end{equation*}"
+      ],
+      "text/plain": [
+       "/                      2          \\              \n",
+       "|                     d           |              \n",
+       "|g*cos(theta(t)) + l*---(theta(t))|*cos(theta(t))\n",
+       "|                      2          |              \n",
+       "\\                    dt           /              "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(y,t,t) - sol[diff(y,t,t)] |> subs(rule3) |>subs(rule2) |> subs(rule1) |> simplify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that both equations collapse down to the \"regular\" ode."
    ]
   },
   {
