more derivations - update Adam's Method - include first draft of BDF2 derivation

--- a/ODE-IVP/derivations/AdamsMethods.ipynb
+++ b/ODE-IVP/derivations/AdamsMethods.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "using Pkg\n",
     "Pkg.activate(\".\")\n",
-    "using SymPy\n",
-    "using Plots"
+    "using SymPy"
    ]
   },
   {
@@ -224,6 +223,123 @@
     }
    ],
    "source": [
+    "Eq(x3, x2 + intP_h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adams-Moulton\n",
+    "These methods differ from Bashforth in how $p(t)$ is built.  Instead of only using previous values, it involves the unknown current value as well.  This makes AM methods *implicit*.\n",
+    "\n",
+    "Compared to the analysis before, the interpolation $P$ is bumped up 1 order, bounds of the integral are adjusted.\n",
+    "\n",
+    "### AB3: Two previous states, \n",
+    "This is the same storage need as before in AB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation*}\\frac{f_{1} \\left(t - t_{2}\\right) \\left(t - t_{3}\\right)}{\\left(t_{1} - t_{2}\\right) \\left(t_{1} - t_{3}\\right)} + \\frac{f_{2} \\left(t - t_{1}\\right) \\left(t - t_{3}\\right)}{\\left(- t_{1} + t_{2}\\right) \\left(t_{2} - t_{3}\\right)} + \\frac{f_{3} \\left(t - t_{1}\\right) \\left(t - t_{2}\\right)}{\\left(- t_{1} + t_{3}\\right) \\left(- t_{2} + t_{3}\\right)}\\end{equation*}"
+      ],
+      "text/plain": [
+       "f_1*(t - t2)*(t - t3)   f_2*(t - t1)*(t - t3)   f_3*(t - t1)*(t - t2)\n",
+       "--------------------- + --------------------- + ---------------------\n",
+       " (t1 - t2)*(t1 - t3)     (-t1 + t2)*(t2 - t3)   (-t1 + t3)*(-t2 + t3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "P = [ F[i]*l(t, i, n) for i in 1:n ] |> sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation*}\\frac{f_{1} t_{2}^{3} - 3 f_{1} t_{2}^{2} t_{3} + 3 f_{1} t_{2} t_{3}^{2} - f_{1} t_{3}^{3} - 3 f_{2} t_{1}^{2} t_{2} + 3 f_{2} t_{1}^{2} t_{3} + 2 f_{2} t_{1} t_{2}^{2} + 2 f_{2} t_{1} t_{2} t_{3} - 4 f_{2} t_{1} t_{3}^{2} - 2 f_{2} t_{2}^{2} t_{3} + f_{2} t_{2} t_{3}^{2} + f_{2} t_{3}^{3} - 3 f_{3} t_{1}^{2} t_{2} + 3 f_{3} t_{1}^{2} t_{3} + 4 f_{3} t_{1} t_{2}^{2} - 2 f_{3} t_{1} t_{2} t_{3} - 2 f_{3} t_{1} t_{3}^{2} - f_{3} t_{2}^{3} - f_{3} t_{2}^{2} t_{3} + 2 f_{3} t_{2} t_{3}^{2}}{6 t_{1}^{2} - 6 t_{1} t_{2} - 6 t_{1} t_{3} + 6 t_{2} t_{3}}\\end{equation*}"
+      ],
+      "text/plain": [
+       "      3           2                 2         3           2              2    \n",
+       "f_1*t2  - 3*f_1*t2 *t3 + 3*f_1*t2*t3  - f_1*t3  - 3*f_2*t1 *t2 + 3*f_2*t1 *t3 \n",
+       "------------------------------------------------------------------------------\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "\n",
+       "             2                               2           2               2    \n",
+       "+ 2*f_2*t1*t2  + 2*f_2*t1*t2*t3 - 4*f_2*t1*t3  - 2*f_2*t2 *t3 + f_2*t2*t3  + f\n",
+       "------------------------------------------------------------------------------\n",
+       "                                               2                              \n",
+       "                                           6*t1  - 6*t1*t2 - 6*t1*t3 + 6*t2*t3\n",
+       "\n",
+       "     3           2              2                 2                           \n",
+       "_2*t3  - 3*f_3*t1 *t2 + 3*f_3*t1 *t3 + 4*f_3*t1*t2  - 2*f_3*t1*t2*t3 - 2*f_3*t\n",
+       "------------------------------------------------------------------------------\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "\n",
+       "    2         3         2                 2\n",
+       "1*t3  - f_3*t2  - f_3*t2 *t3 + 2*f_3*t2*t3 \n",
+       "-------------------------------------------\n",
+       "                                           \n",
+       "                                           "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intP = integrate(P, (t, T[n-1], T[n] ) ) |> simplify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, let's assume that the step size is constant $h$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation*}x_{3} = \\frac{h \\left(- f_{1} + 8 f_{2} + 5 f_{3}\\right)}{12} + x_{2}\\end{equation*}"
+      ],
+      "text/plain": [
+       "     h*(-f_1 + 8*f_2 + 5*f_3)     \n",
+       "x3 = ------------------------ + x2\n",
+       "                12                "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intP_h = intP |> subs( t2=>t1+h, t3=> t1+2*h ) |> simplify\n",
     "Eq(x3, x2 + intP_h)"
    ]
   },
