--- a/ODE-IVP/derivations/BDF.ipynb
+++ b/ODE-IVP/derivations/BDF.ipynb
@@ -31,11 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1, x2, x3, x4, x5 = symbols(\"x1, x2, x3, x4, x5\")\n",
-    "t1, t2, t3, t4, t5 = symbols(\"t1, t2, t3, t4, t5\")\n",
+    "x1, x2, x3, x4, x5, x6, x7, x8 = symbols(\"x1, x2, x3, x4, x5, x6, x7, x8\")\n",
+    "t1, t2, t3, t4, t5, t6, t7, t8 = symbols(\"t1, t2, t3, t4, t5, t6, t7, t8\")\n",
     "t = symbols(\"t\")\n",
-    "X = [x1,x2,x3,x4,x5]\n",
-    "T = [t1,t2,t3,t4,t5]\n",
+    "X = [x1,x2,x3,x4,x5,x6,x7,x8]\n",
+    "T = [t1,t2,t3,t4,t5,t6,t7,t8]\n",
     "f = symbols(\"f\")\n",
     "h = symbols(\"h\")\n",
     "\n",
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "dP1 = dP |> subs(t=>t3) |>  subs(t2=>t1+h, t3=>t1+2*h) |> simplify"
+    "dP1 = dP |> subs(t=>T[n]) |>  subs(t2=>t1+h, t3=>t1+2*h, t4=>t1+3*h, t5=>t1+4*h, t6=>t1+5*h, t7=>t1+6*h, t8=>t1+7*h) |> simplify"
    ]
   },
   {
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "solve(eq, x3 )[1]"
+    "solve(eq, X[n] )[1]"
    ]
   },
   {
@@ -245,7 +245,7 @@
     }
    ],
    "source": [
-    "Eq( x3, solve(eq, x3 )[1] )"
+    "Eq( x3, solve(eq, X[n] )[1] )"
    ]
   },
   {
